# omicslog_dev

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: docker-compose.yml
.devcontainer/py/: Dockerfile  devcontainer.json
.devcontainer/r/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
analysis/py/: adata_reference_code.ipynb  logging.txt  omicslog_beta.ipynb  smoke.py  testing_logging_scanpy.ipynb
analysis/r/: smoke.R  template.qmd
